# trialgate

./: .gitignore  README.md  TRIALGATE_REQUIREMENTS.md
trialgate/: README.md  engine.py  pyproject.toml  report.py  server.py
trialgate/data/: clinical_records_dirty.csv
trialgate/data/patients/DEMO-001/: daily_log.json  labs.csv  medical_history.json  prescriptions.json  urine_test.csv
trialgate/data/patients/DEMO-002/: daily_log.json  labs.csv  medical_history.json  prescriptions.json  urine_test.csv
trialgate/data/patients/DEMO-003/: daily_log.json  labs.csv  medical_history.json  prescriptions.json  urine_test.csv
trialgate/patient_intake/: clean_profile.py  normalize_records.py  parsers.py  pipeline.py  trials.py
trialgate/rules/: detect.py  normalize.py
trialgate/tests/: test_engine.py  test_patient_intake.py
web/: chat.html  index.html  server.py
