[project]
name = "trialgate"
version = "0.1.0"
description = "MCP server for deterministic clinical trial data cleaning"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
